--- a/shims/mapr61/driver/pom.xml
+++ b/shims/mapr61/driver/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-mapr61-reactor</artifactId>
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.2021.05.00-17</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-mapr61-driver</artifactId>
-  <version>9.3.0.0-SNAPSHOT</version>
+  <version>9.3.2021.05.00-17</version>
   <packaging>bundle</packaging>
   <properties>
-    <pentaho-osgi-bundles.version>9.3.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
+    <pentaho-osgi-bundles.version>9.3.0.0-17</pentaho-osgi-bundles.version>
     <org.apache.avro.version>1.8.0</org.apache.avro.version>
     <org.apache.hadoop.version>2.7.0-mapr-1808</org.apache.hadoop.version>
     <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
