--- a/mapreduce/pom.xml
+++ b/mapreduce/pom.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-hadoop-shims</artifactId>
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.2021.05.00-21</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-common-mapreduce</artifactId>
-  <version>9.3.0.0-SNAPSHOT</version>
+  <version>9.3.2021.05.00-21</version>
   <packaging>jar</packaging>
 
   <properties>
